Added Image picker for user avatar and animation to it

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_auth: ^4.5.0
   firebase_storage: ^11.1.2
   image_picker: ^0.8.7+4
+  cached_network_image: ^3.2.3
+  shimmer_animation: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
