--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_svg: ^2.0.5
+  flutter_svg: ^1.0.0
   firebase_core: ^2.11.0
   cloud_firestore: ^4.6.0
   firebase_auth: ^4.5.0
@@ -43,6 +43,9 @@ dependencies:
   image_picker: ^0.8.7+4
   cached_network_image: ^3.2.3
   shimmer_animation: ^2.1.0+1
+  flutterfire_ui: ^0.4.3+20
+  country_state_city_picker: ^1.2.8
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
