--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   date_time_picker: ^2.1.0
   provider: ^6.0.5
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
