--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   date_time_picker: ^2.1.0
   provider: ^6.0.5
   uuid: ^3.0.7
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
