--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   provider: ^6.0.5
   uuid: ^3.0.7
   photo_view: ^0.14.0
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
